welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:3: error: ';' expected but 'else' found.
	else {if ((you<=2 && you>=0) || (date<=2 && date>=0)) return 0}	else {return 1}}
                                                                        ^